# napari-sam

./: .gitignore  LICENSE  README.md  pyproject.toml  run_example.py  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_sam/: QCollapsibleBox.py  __init__.py  _live_overlay.py  _widget.py  napari.yaml  slicer.py  utils.py
src/napari_segment_anything/: __init__.py  _widget.py  napari.yaml
src/napari_segment_anything/_tests/: test_widget.py
