[metadata]
name = napari-segment-anything
version = attr: napari_segment_anything.__version__
description = Segment anything with Meta AI's new SAM model!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Karol-G/napari-segment-anything
author = Karol Gotkowski
author_email = karol.gotkowski@dkfz.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/Karol-G/napari-segment-anything/issues
    Documentation = https://github.com/Karol-G/napari-segment-anything#README.md
    Source Code = https://github.com/Karol-G/napari-segment-anything
    User Support = https://github.com/Karol-G/napari-segment-anything/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    segment-anything @ git+https://github.com/facebookresearch/segment-anything.git@main

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-segment-anything = napari_segment_anything:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
